// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigateTo should pass data to view component 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-testid="test"
      >
        BarTest
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`redirectTo should pass data to view component 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-testid="test"
      >
        BarTest
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should catch and emit rendering error thrown from error view 1`] = `
<DocumentFragment>
  <div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`renderView should cause redirection to the first match view if none was matched 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should clear view data when navigation is aborted 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should clear view data when navigation is redirected 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should match views with more params first 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        baz
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should pass props to view container 1`] = `
<DocumentFragment>
  <div>
    <div
      class="foo"
    >
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should persist view data in history 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        BarTest
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render class component registered without import 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render functional component registered without import 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render matched view 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;
